--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.5.1",
     "@mui/styles": "^5.6.1",
+    "animate.css": "^4.1.1",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-animation-on-scroll": "^5.1.0",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2"
   },
