--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.2",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@googlemaps/react-wrapper": "^1.1.31",
     "@mui/icons-material": "^5.6.1",
-    "@mui/material": "^5.5.1",
+    "@mui/material": "^5.6.2",
     "@mui/styles": "^5.6.1",
     "animate.css": "^4.1.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-animation-on-scroll": "^5.1.0",
     "react-countdown": "^2.3.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "8.11.0",
