--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.6.2",
     "@mui/styles": "^5.6.1",
     "animate.css": "^4.1.1",
+    "axios": "^0.27.2",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-animation-on-scroll": "^5.1.0",
